Problem with auth in swagger-autogen
