# src/shared/infra/http/routes/rental.routes.ts
@@ -11,11 +11,17 @@ const createRentalController = new CreateRentalController();
 const devolutionRentalController = new DevolutionRentalController();
 const listRentalsByUserController = new ListRentalsByUserController();
 
-rentalRoutes.post("/", ensureAuthenticated, createRentalController.handle);
+rentalRoutes.post("/", ensureAuthenticated, createRentalController.handle
+    /* #swagger.tags = ['Rental'] */
+);
 
-rentalRoutes.post("/devolution/:id", ensureAuthenticated, devolutionRentalController.handle);
+rentalRoutes.post("/devolution/:id", ensureAuthenticated, devolutionRentalController.handle
+    /* #swagger.tags = ['Rental'] */
+);
 
-rentalRoutes.get("/user", ensureAuthenticated, listRentalsByUserController.handle);
+rentalRoutes.get("/user", ensureAuthenticated, listRentalsByUserController.handle
+    /* #swagger.tags = ['Rental'] */
+);
 
 
 export {rentalRoutes};
